--- a/src/pug/layouts/partials/footer.pug
+++ b/src/pug/layouts/partials/footer.pug
@@ -4,4 +4,4 @@ footer.footer
         p.text-center.text-muted
             | All right received &copy; 2019.
 // /Footer
-script(src="../dist/js/app.js")
+script(src="./js/app.js")
