--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -3,7 +3,7 @@ block content
     // Home
     section.home
         .text-center
-            img(src="../dist/images/pug.png")
+            img(src="./images/pug.png")
             h1 Welcome To Home Page.
             p.lead
                 | You can use &nbsp;
