--- a/src/pug/pages/about.pug
+++ b/src/pug/pages/about.pug
@@ -3,6 +3,6 @@ block content
     // About
     section.about
         .text-center
-            img(src="../dist/images/pug.png")
+            img(src="./images/pug.png")
             h1 Welcome To About Page.
     // /About
