add icons in navbar

--- a/src/pug/layouts/partials/header.pug
+++ b/src/pug/layouts/partials/header.pug
@@ -11,10 +11,13 @@ header.header
             ul.navbar-nav.mr-auto
                 li.nav-item.active
                     a.nav-link(href="./index.html")
+                        i.fas.fa-home.mr-2
                         | Home
                         span.sr-only (current)
                 li.nav-item
-                    a.nav-link(href="./about.html") About
+                    a.nav-link(href="./about.html")
+                        i.fas.fa-question-circle.mr-2
+                        | About
 
-    // Navbar
+    // /Navbar
 // /Header
