--- a/src/sass/global/_icons.scss
+++ b/src/sass/global/_icons.scss
@@ -1,4 +1,4 @@
-/*rtl:begin:options:
+/*!rtl:begin:options:
 {
   "autoRename": true,
   "stringMap":[
@@ -16,4 +16,4 @@
 @import "~@fortawesome/fontawesome-free/scss/solid";
 @import "~@fortawesome/fontawesome-free/scss/brands";
 @import "~icomoon/style.css";
-/*rtl:end:options*/
+/*!rtl:end:options*/
