add rtl version review

--- a/src/pug/layouts/partials/head.pug
+++ b/src/pug/layouts/partials/head.pug
@@ -3,4 +3,9 @@ title Front End Scaffolding
 meta(charset="utf-8")
 meta(name="viewport", content="width=device-width, initial-scale=1, shrink-to-fit=no")
 
-link(rel="stylesheet", href="./css/app.css")
+link(
+    rel="stylesheet",
+    href="./css/app.css",
+    data-rtl="./css/app.rtl.css",
+    data-ltr="./css/app.css"
+    )
