--- a/src/pug/layouts/partials/header.pug
+++ b/src/pug/layouts/partials/header.pug
@@ -18,6 +18,14 @@ header.header
                     a.nav-link(href="./about.html")
                         i.fas.fa-question-circle.mr-2
                         | About
+                li.nav-item
+                    a.nav-link(href="javascript:direction('rtl');")
+                        i.fas.fa-question-circle.mr-2
+                        | RTL Version
+                li.nav-item
+                    a.nav-link(href="javascript:direction('ltr');")
+                        i.fas.fa-question-circle.mr-2
+                        | LTR Version
 
     // /Navbar
 // /Header
